// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleButton field should render button 1`] = `
<Action
  bsStyle="primary"
  className="btn"
  disabled={false}
  id="myForm"
  inProgress={false}
  label="Boom !"
  onClick={undefined}
  tooltipPlacement="top"
  type="button"
/>
`;

exports[`SingleButton field should render reset button 1`] = `
<Action
  bsStyle="primary"
  className="btn"
  disabled={false}
  id="myForm"
  inProgress={false}
  label="Boom !"
  onClick={undefined}
  tooltipPlacement="top"
  type="reset"
/>
`;

exports[`SingleButton field should render submit button 1`] = `
<Action
  bsStyle="primary"
  className="btn"
  disabled={false}
  id="myForm"
  inProgress={false}
  label="Boom !"
  onClick={undefined}
  tooltipPlacement="top"
  type="submit"
/>
`;
